--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,19 +20,104 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</head>
+<body>
+<!--<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>-->
+<!--<script src="https://code.highcharts.com/stock/highstock.js"></script>-->
+<!--<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>-->
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+<div id="container" style="height: 400px; min-width: 310px"></div>
+<noscript>You need to enable JavaScript to run this app.</noscript>
+<div id="root"></div>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<script>
+  // $.getJSON('https://cdn.jsdelivr.net/gh/highcharts/highcharts@v7.0.0/samples/data/large-dataset.json', function (data) {
+  //
+  //   // Create a timer
+  //   var start = +new Date();
+  //
+  //   // Create the chart
+  //   Highcharts.stockChart('container', {
+  //     chart: {
+  //       events: {
+  //         load: function () {
+  //           if (!window.TestController) {
+  //             this.setTitle(null, {
+  //               text: 'Built chart in ' + (new Date() - start) + 'ms'
+  //             });
+  //           }
+  //         }
+  //       },
+  //       zoomType: 'x'
+  //     },
+  //
+  //     rangeSelector: {
+  //
+  //       buttons: [{
+  //         type: 'day',
+  //         count: 3,
+  //         text: '3d'
+  //       }, {
+  //         type: 'week',
+  //         count: 1,
+  //         text: '1w'
+  //       }, {
+  //         type: 'month',
+  //         count: 1,
+  //         text: '1m'
+  //       }, {
+  //         type: 'month',
+  //         count: 6,
+  //         text: '6m'
+  //       }, {
+  //         type: 'year',
+  //         count: 1,
+  //         text: '1y'
+  //       }, {
+  //         type: 'all',
+  //         text: 'All'
+  //       }],
+  //       selected: 3
+  //     },
+  //
+  //     yAxis: {
+  //       title: {
+  //         text: 'Temperature (°C)'
+  //       }
+  //     },
+  //
+  //     title: {
+  //       text: 'Hourly temperatures in Vik i Sogn, Norway, 2009-2017'
+  //     },
+  //
+  //     subtitle: {
+  //       text: 'Built chart in ...' // dummy text to reserve space for dynamic subtitle
+  //     },
+  //
+  //     series: [{
+  //       name: 'Temperature',
+  //       data: data.data,
+  //       pointStart: data.pointStart,
+  //       pointInterval: data.pointInterval,
+  //       tooltip: {
+  //         valueDecimals: 1,
+  //         valueSuffix: '°C'
+  //       }
+  //     }]
+  //
+  //   });
+  // });
+
+</script>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
+
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
+
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
