add calling profit line api function

--- a/public/index.html
+++ b/public/index.html
@@ -22,102 +22,11 @@
     <title>React App</title>
 </head>
 <body>
-<!--<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>-->
-<!--<script src="https://code.highcharts.com/stock/highstock.js"></script>-->
-<!--<script src="https://code.highcharts.com/stock/modules/exporting.js"></script>-->
 
-<div id="container" style="height: 400px; min-width: 310px"></div>
-<noscript>You need to enable JavaScript to run this app.</noscript>
+
+<!--<div id="container" style="height: 400px; min-width: 310px"></div>-->
+<!--<noscript>You need to enable JavaScript to run this app.</noscript>-->
 <div id="root"></div>
 
-<script>
-  // $.getJSON('https://cdn.jsdelivr.net/gh/highcharts/highcharts@v7.0.0/samples/data/large-dataset.json', function (data) {
-  //
-  //   // Create a timer
-  //   var start = +new Date();
-  //
-  //   // Create the chart
-  //   Highcharts.stockChart('container', {
-  //     chart: {
-  //       events: {
-  //         load: function () {
-  //           if (!window.TestController) {
-  //             this.setTitle(null, {
-  //               text: 'Built chart in ' + (new Date() - start) + 'ms'
-  //             });
-  //           }
-  //         }
-  //       },
-  //       zoomType: 'x'
-  //     },
-  //
-  //     rangeSelector: {
-  //
-  //       buttons: [{
-  //         type: 'day',
-  //         count: 3,
-  //         text: '3d'
-  //       }, {
-  //         type: 'week',
-  //         count: 1,
-  //         text: '1w'
-  //       }, {
-  //         type: 'month',
-  //         count: 1,
-  //         text: '1m'
-  //       }, {
-  //         type: 'month',
-  //         count: 6,
-  //         text: '6m'
-  //       }, {
-  //         type: 'year',
-  //         count: 1,
-  //         text: '1y'
-  //       }, {
-  //         type: 'all',
-  //         text: 'All'
-  //       }],
-  //       selected: 3
-  //     },
-  //
-  //     yAxis: {
-  //       title: {
-  //         text: 'Temperature (°C)'
-  //       }
-  //     },
-  //
-  //     title: {
-  //       text: 'Hourly temperatures in Vik i Sogn, Norway, 2009-2017'
-  //     },
-  //
-  //     subtitle: {
-  //       text: 'Built chart in ...' // dummy text to reserve space for dynamic subtitle
-  //     },
-  //
-  //     series: [{
-  //       name: 'Temperature',
-  //       data: data.data,
-  //       pointStart: data.pointStart,
-  //       pointInterval: data.pointInterval,
-  //       tooltip: {
-  //         valueDecimals: 1,
-  //         valueSuffix: '°C'
-  //       }
-  //     }]
-  //
-  //   });
-  // });
-
-</script>
-<!--
-  This HTML file is a template.
-  If you open it directly in the browser, you will see an empty page.
-
-  You can add webfonts, meta tags, or analytics to this file.
-  The build step will place the bundled scripts into the <body> tag.
-
-  To begin the development, run `npm start` or `yarn start`.
-  To create a production bundle, use `npm run build` or `yarn build`.
--->
 </body>
 </html>
